include/altdss/capi/dss.h

    /*! 
    Names of all Line Objects
    */
    ALTDSS_CAPI_DLL void Lines_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Name of bus for terminal 1.
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_Bus1(void);
    /*! 
    Name of bus for terminal 2.
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_Bus2(void);
    /*! 
    Invoking this property sets the first element active.  Returns 0 if no lines.  Otherwise, index of the line element.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_First(void);
    /*! 
    Length of line section in units compatible with the LineCode definition.
    */
    ALTDSS_CAPI_DLL double Lines_Get_Length(void);
    /*! 
    Name of LineCode object that defines the impedances.
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_LineCode(void);
    /*! 
    Specify the name of the Line element to set it active.
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_Name(void);
    /*! 
    Invoking this property advances to the next Line element active.  Returns 0 if no more lines.  Otherwise, index of the line element.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_Next(void);
    /*! 
    Number of Phases, this Line element.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_Phases(void);
    /*! 
    Positive-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_R1(void);
    /*! 
    Positive-sequence reactance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_X1(void);
    ALTDSS_CAPI_DLL int32_t Lines_New(const char* Name);
    /*! 
    Name of bus for terminal 1.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Bus1(const char* Value);
    /*! 
    Name of bus for terminal 2.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Bus2(const char* Value);
    /*! 
    Length of line section in units compatible with the LineCode definition.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Length(double Value);
    /*! 
    Name of LineCode object that defines the impedances.
    */
    ALTDSS_CAPI_DLL void Lines_Set_LineCode(const char* Value);
    /*! 
    Specify the name of the Line element to set it active.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Name(const char* Value);
    /*! 
    Number of Phases, this Line element.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Phases(int32_t Value);
    /*! 
    Positive-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_R1(double Value);
    /*! 
    Positive-sequence reactance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_X1(double Value);
    /*! 
    Zero-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_C0(void);
    /*! 
    Positive-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_C1(void);
    ALTDSS_CAPI_DLL void Lines_Get_Cmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Zero-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_R0(void);
    /*! 
    Resistance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Get_Rmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Zero-sequence reactance ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_X0(void);
    /*!
    Reactance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Zero-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_C0(double Value);
    /*! 
    Positive-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_C1(double Value);
    ALTDSS_CAPI_DLL void Lines_Set_Cmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Zero-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_R0(double Value);
    /*! 
    Resistance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Zero-sequence reactance ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_X0(double Value);
    ALTDSS_CAPI_DLL void Lines_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Emergency (maximum) ampere rating of Line.
    */
    ALTDSS_CAPI_DLL double Lines_Get_EmergAmps(void);
    /*! 
    Normal ampere rating of Line.
    */
    ALTDSS_CAPI_DLL double Lines_Get_NormAmps(void);
    /*! 
    Emergency (maximum) ampere rating of Line.
    */
    ALTDSS_CAPI_DLL void Lines_Set_EmergAmps(double Value);
    /*! 
    Normal ampere rating of Line.
    */
    ALTDSS_CAPI_DLL void Lines_Set_NormAmps(double Value);
    /*! 
    Line geometry code
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_Geometry(void);
    /*! 
    Line geometry code
    */
    ALTDSS_CAPI_DLL void Lines_Set_Geometry(const char* Value);
    /*! 
    Earth return resistance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL double Lines_Get_Rg(void);
    /*! 
    Earth Resistivity, m-ohms
    */
    ALTDSS_CAPI_DLL double Lines_Get_Rho(void);
    /*! 
    Earth return reactance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL double Lines_Get_Xg(void);
    /*! 
    Earth return resistance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL void Lines_Set_Rg(double Value);
    /*! 
    Earth Resistivity, m-ohms
    */
    ALTDSS_CAPI_DLL void Lines_Set_Rho(double Value);
    /*! 
    Earth return reactance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL void Lines_Set_Xg(double Value);
    /*! 
    Yprimitive for the active line object (complex array).
    */
    ALTDSS_CAPI_DLL void Lines_Get_Yprim(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Yprimitive: Does Nothing at present on Put; Dangerous
    */
    ALTDSS_CAPI_DLL void Lines_Set_Yprim(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Number of customers on this line section.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_NumCust(void);
    /*! 
    Total Number of customers served from this line section.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_TotalCust(void);
    /*! 
    Sets Parent of the active Line to be the active line. Returns 0 if no parent or action fails.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_Parent(void);
    /*! 
    Number of Line objects in Active Circuit.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_Count(void);
    /*! 
    Line spacing code
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_Spacing(void);
    /*! 
    Line spacing code
    */
    ALTDSS_CAPI_DLL void Lines_Set_Spacing(const char* Value);
    ALTDSS_CAPI_DLL int32_t Lines_Get_Units(void);
    ALTDSS_CAPI_DLL void Lines_Set_Units(int32_t Value);