src/main/CAPI_Lines.pas

UNIT CAPI_Lines;
{$inline on}

INTERFACE

USES CAPI_Utils;

PROCEDURE Lines_Get_AllNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
function Lines_Get_Bus1():PAnsiChar;cdecl;
function Lines_Get_Bus2():PAnsiChar;cdecl;
function Lines_Get_First():Integer;cdecl;
function Lines_Get_Length():Double;cdecl;
function Lines_Get_LineCode():PAnsiChar;cdecl;
function Lines_Get_Name():PAnsiChar;cdecl;
function Lines_Get_Next():Integer;cdecl;
function Lines_Get_Phases():Integer;cdecl;
function Lines_Get_R1():Double;cdecl;
function Lines_Get_X1():Double;cdecl;
function Lines_New(const Name: PAnsiChar):Integer;cdecl;
procedure Lines_Set_Bus1(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Bus2(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Length(Value: Double);cdecl;
procedure Lines_Set_LineCode(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Name(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Phases(Value: Integer);cdecl;
procedure Lines_Set_R1(Value: Double);cdecl;
procedure Lines_Set_X1(Value: Double);cdecl;
function Lines_Get_C0():Double;cdecl;
function Lines_Get_C1():Double;cdecl;
PROCEDURE Lines_Get_Cmatrix(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
function Lines_Get_R0():Double;cdecl;
PROCEDURE Lines_Get_Rmatrix(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
function Lines_Get_X0():Double;cdecl;
PROCEDURE Lines_Get_Xmatrix(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
procedure Lines_Set_C0(Value: Double);cdecl;
procedure Lines_Set_C1(Value: Double);cdecl;
procedure Lines_Set_Cmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
procedure Lines_Set_R0(Value: Double);cdecl;
procedure Lines_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
procedure Lines_Set_X0(Value: Double);cdecl;
procedure Lines_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
function Lines_Get_EmergAmps():Double;cdecl;
function Lines_Get_NormAmps():Double;cdecl;
procedure Lines_Set_EmergAmps(Value: Double);cdecl;
procedure Lines_Set_NormAmps(Value: Double);cdecl;
function Lines_Get_Geometry():PAnsiChar;cdecl;
procedure Lines_Set_Geometry(const Value: PAnsiChar);cdecl;
function Lines_Get_Rg():Double;cdecl;
function Lines_Get_Rho():Double;cdecl;
function Lines_Get_Xg():Double;cdecl;
procedure Lines_Set_Rg(Value: Double);cdecl;
procedure Lines_Set_Rho(Value: Double);cdecl;
procedure Lines_Set_Xg(Value: Double);cdecl;
PROCEDURE Lines_Get_Yprim(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
procedure Lines_Set_Yprim(ValuePtr: PDouble; ValueCount: Integer);cdecl;
function Lines_Get_NumCust():Integer;cdecl;
function Lines_Get_TotalCust():Integer;cdecl;
function Lines_Get_Parent():Integer;cdecl;
function Lines_Get_Count():Integer;cdecl;
function Lines_Get_Spacing():PAnsiChar;cdecl;
procedure Lines_Set_Spacing(const Value: PAnsiChar);cdecl;
function Lines_Get_Units():Integer;cdecl;
procedure Lines_Set_Units(Value: Integer);cdecl;

IMPLEMENTATION

USES CAPI_Constants, Line, DSSClassDefs, DSSGlobals, CktElement, uComplex, ExecHelper, Sysutils, ParserDel, Math, LineUnits;

Function IsLine(Const CktElem:TDSSCktElement):Boolean;

Begin
      Result := ((CktElem.DssObjtype AND CLASSMASK) = LINE_ELEMENT);
      If Not Result THEN
       DoSimpleMsg('Line Type Expected, but another found. Dss Class=' + CktElem.DSSClassName + CRLF +
       'Element name='+ CktElem.Name, 5007) ;
END;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_AllNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
VAR
  Result: PPAnsiCharArray;
  LineElem:TLineObj;
  k:Integer;

Begin
    Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    IF ActiveCircuit <> Nil THEN
     WITH ActiveCircuit DO
     If Lines.ListSize>0 Then
     Begin
       DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (Lines.ListSize-1) + 1);
       k:=0;
       LineElem := Lines.First;
       WHILE LineElem<>Nil DO
       Begin
          Result[k] := DSS_CopyStringAsPChar(LineElem.Name);
          Inc(k);
          LineElem := Lines.Next;
       End;
     End;

end;
//------------------------------------------------------------------------------
function Lines_Get_Bus1_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := ActiveCircuit.ActiveCktElement.GetBus(1);
  End

end;

function Lines_Get_Bus1():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Bus1_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_Bus2_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := ActiveCircuit.ActiveCktElement.GetBus(2);
  End
end;

function Lines_Get_Bus2():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Bus2_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_First():Integer;cdecl;
Var
   pLine:TLineObj;

Begin

   Result := 0;
   If ActiveCircuit <> Nil Then
   Begin
        pLine := ActiveCircuit.Lines.First;
        If pLine <> Nil Then
        Begin
          Repeat
            If pLine.Enabled
            Then Begin
              ActiveCircuit.ActiveCktElement := pLine;
              Result := 1;
            End
            Else pLine := ActiveCircuit.Lines.Next;
          Until (Result = 1) or (pLine = nil);
        End
        Else
            Result := 0;  // signify no more
   End;

end;
//------------------------------------------------------------------------------
function Lines_Get_Length():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).Len;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_LineCode_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).CondCode;
  End

end;

function Lines_Get_LineCode():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_LineCode_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_Name_AnsiString():AnsiString;inline;
Var
   pLine:TDSSCktElement;

Begin
   Result := '';  // signify no name
   If ActiveCircuit <> Nil Then
   Begin
        pLine := ActiveCircuit.ActiveCktElement;
        If pLine <> Nil Then
        Begin
          Result := pLine.Name;
        End;
   End;

end;

function Lines_Get_Name():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_Next():Integer;cdecl;
Var
   pLine:TLineObj;

Begin

   Result := 0;
   If ActiveCircuit <> Nil Then
   Begin
        pLine := ActiveCircuit.Lines.Next;
        If pLine <> Nil Then
        Begin
          Repeat
            If pLine.Enabled
            Then Begin
              ActiveCircuit.ActiveCktElement := pLine;
              Result := ActiveCircuit.Lines.ActiveIndex;
            End
            Else pLine := ActiveCircuit.Lines.Next;
          Until (Result > 0) or (pLine = nil);
        End
        Else
            Result := 0;  // signify no more
   End;

end;
//------------------------------------------------------------------------------
function Lines_Get_Phases():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := ActiveCircuit.ActiveCktElement.Nphases;
  End

end;
//------------------------------------------------------------------------------
function Lines_Get_R1():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN With TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
       Result := R1/UnitsConvert;
  End;

end;
//------------------------------------------------------------------------------
function Lines_Get_X1():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN With TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
       Result := X1/UnitsConvert;
  End;

end;
//------------------------------------------------------------------------------
function Lines_New(const Name: PAnsiChar):Integer;cdecl;
begin
      Result := AddObject('line', Name);    // Returns handle to object
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Bus1(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         SetBus(1, Value);
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Bus2(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         SetBus(2, Value);
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Length(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         Len := Value;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_LineCode(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       With TLineObj(ActiveCircuit.ActiveCktElement) DO Begin
         FetchLineCode(Value);
         YprimInvalid := True;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure Lines_Set_Name(const Value: PAnsiChar);cdecl;
VAR
    activesave :integer;
    pLine:TLineObj;
    S: String;
    Found :Boolean;
Begin


  IF ActiveCircuit <> NIL
  THEN Begin      // Search list of Lines in active circuit for name
       WITH ActiveCircuit.Lines DO
         Begin
             S := Value;  // Convert to Pascal String
             Found := FALSE;
             ActiveSave := ActiveIndex;
             pLine := First;
             While pLine <> NIL Do
             Begin
                IF (CompareText(pLine.Name, S) = 0)
                THEN Begin
                    ActiveCircuit.ActiveCktElement := pLine;
                    Found := TRUE;
                    Break;
                End;
                pLine := Next;
             End;
             IF NOT Found
             THEN Begin
                 DoSimpleMsg('Line "'+S+'" Not Found in Active Circuit.', 5008);
                 pLine := Get(ActiveSave);    // Restore active Line
                 ActiveCircuit.ActiveCktElement := pLine;
             End;
         End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Phases(Value: Integer);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       With TLineObj(ActiveCircuit.ActiveCktElement)Do Begin
         Nphases := Value;
         YprimInvalid := True;
       End;
  End;
